feat:webpack版本更新，修复一些问题

--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
     <title>Document</title>
     <!-- 这里不推荐直接引用任何css和包文件，不然就还是那个问题：多次进行二次请求-->
     <!-- <script src="./main.js"></script> es6语法浏览器不能识别，所以webpack构建工具处理main.js,生成boundle.js-->
-    <script src="../dist/boundle.js"></script>
+    <!-- <script src="/boundle.js"></script> -->
 </head>
 <body>
     <ul id="list">
@@ -19,6 +19,7 @@
         <li>这是第6个li</li>
         <li>这是第7个li</li>
         <li>这是第8个li</li>
+        <li>这是第9个li</li>
     </ul>
 </body>
 </html>
