--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,7 @@
     <!-- 这里不推荐直接引用任何css和包文件，不然就还是那个问题：多次进行二次请求-->
     <!-- <script src="./main.js"></script> es6语法浏览器不能识别，所以webpack构建工具处理main.js,生成boundle.js-->
     <!-- <script src="/boundle.js"></script> -->
+    <!-- <link rel="stylesheet" href="./css/style.css"> -->
 </head>
 <body>
     <ul id="list">
@@ -21,5 +22,8 @@
         <li>这是第8个li</li>
         <li>这是第9个li</li>
     </ul>
+    <div class="box">
+        
+    </div>
 </body>
 </html>
